# TCP_Chat

./: .ocamlformat  Makefile  README.md  Readme.md  TCP_Chat.opam  dune-project
docs/: tech.md
lib/: client.ml  client.mli  common.ml  common.mli  config.ml  dune  message.ml  message.mli  server.ml  server.mli
test/: connection_alcotest.ml  connection_ounit_test.ml  dune  message_alcotest.ml  server_alcotest.ml
